--- a/sass/components/_modal-btn.scss
+++ b/sass/components/_modal-btn.scss
@@ -10,7 +10,9 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border-color: transparent;
-  transition: background-color var(--main-duration) var(--timing-function);
+  @media screen and (min-width: 1200px) {
+    transition: background-color var(--main-duration) var(--timing-function);
+  }
 
   &:hover,
   &:focus {
