--- a/sass/components/_social.scss
+++ b/sass/components/_social.scss
@@ -11,7 +11,9 @@
   width: 44px;
   height: 44px;
   border-radius: 50%;
-  transition: background-color var(--main-duration) var(--timing-function);
+  @media screen and (min-width: 1200px) {
+    transition: background-color var(--main-duration) var(--timing-function);
+  }
 
   &:hover,
   &:focus {
@@ -20,7 +22,9 @@
   }
 }
 .social__icons {
-  transition: fill var(--main-duration) var(--timing-function);
+  @media screen and (min-width: 1200px) {
+    transition: fill var(--main-duration) var(--timing-function);
+  }
 
   .social__link:hover &,
   .social__link:hover & {
