--- a/sass/layout/_customers.scss
+++ b/sass/layout/_customers.scss
@@ -26,8 +26,9 @@
   border-radius: 4px;
   width: 100%;
   height: 100%;
-  transition: border-color var(--main-duration) var(--timing-function);
-
+  @media screen and (min-width: 1200px) {
+    transition: border-color var(--main-duration) var(--timing-function);
+  }
   &:hover,
   &:focus {
     border-color: var(--accent-color);
@@ -36,8 +37,9 @@
 .customers__icons {
   width: 106px;
   height: 60px;
-  transition: fill var(--main-duration) var(--timing-function);
-
+  @media screen and (min-width: 1200px) {
+    transition: fill var(--main-duration) var(--timing-function);
+  }
   .customers__link:hover &,
   .customers__link:focus & {
     fill: var(--accent-color);
