--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -35,6 +35,9 @@
   }
 
   .features__items {
+    &:not(:last-child) {
+      margin-bottom: 0;
+    }
     margin-top: 30px;
     margin-left: 30px;
     flex-basis: calc((100% - 60px) / 2);
