--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -19,7 +19,6 @@
   border: none;
   padding: 0;
   cursor: pointer;
-  transition: fill var(--main-duration) var(--timing-function);
 
   &__icon {
     width: 40px;
@@ -32,17 +31,24 @@
 }
 .mobile-menu {
   position: fixed;
-  z-index: 100;
+  z-index: 1000;
   left: 0;
   top: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: var(--secondary-font-color);
   overflow-y: scroll;
+  transform: translateX(100%);
+  transition: var(--main-duration) var(--timing-function);
 
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
+  &.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+  }
+  &.is-open {
+    transform: translatex(0);
+  }
 
   &__btn--close {
     position: absolute;
@@ -53,7 +59,6 @@
     padding: 0;
     line-height: 0;
     cursor: pointer;
-    transition: fill var(--main-duration) var(--timing-function);
   }
   &__btn--close:hover,
   &__btn--close:focus {
@@ -74,23 +79,36 @@
 
 .mobile-menu__container {
   position: relative;
-  min-height: 200px;
+  display: flex;
+  flex-direction: column;
   padding-top: 48px;
+  padding-bottom: 48px;
   padding-left: 40px;
 }
 
 .nav-list {
-  margin-bottom: 125px;
+  margin-bottom: 80px;
 }
 .nav-list__item {
   @include font(40px, 500, 1.17, 0.02em);
   &:not(:last-child) {
     margin-bottom: 32px;
   }
+
+  &__link:hover,
+  &__link:focus {
+    color: var(--accent-color);
+  }
 }
 
 .contacts-list {
+  margin-top: auto;
   margin-bottom: 64px;
+
+  &__link:hover,
+  &__link:focus {
+    color: var(--accent-color);
+  }
 }
 
 .contacts-list__item {
@@ -111,7 +129,6 @@
   display: flex;
   flex-wrap: wrap;
   position: relative;
-  padding-bottom: 48px;
 }
 
 .media-list__item:not(:last-child) {
