--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -2,77 +2,51 @@
   background-color: var(--second-background-color);
   background-size: cover;
   background-repeat: no-repeat;
-  max-width: 480px;
+  height: 400px;
   margin: 0 auto;
   text-align: center;
   padding-top: 118px;
   padding-bottom: 118px;
-}
-.hero__title {
-  margin: 0 auto;
-  @include font(26px, 900, 1.61, 0.06em);
-  text-align: center;
-  text-transform: uppercase;
-  margin-bottom: 30px;
-  color: var(--secondary-font-color);
-}
-@media screen and (min-width: 320px) {
-  .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../images/hero/hero-img-mobile.jpg);
-  }
-}
-
-@media screen and (min-width: 320px) and (min-device-pixel-ratio: 2),
-  (-webkit-min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
-  .hero {
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/hero/hero-img-mobile.jpg);
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
       url(../images/hero/hero-img-mobile@2x.jpg);
   }
-}
-
-@media screen and (min-width: 768px) {
-  .hero {
-    max-width: 768px;
+  @media screen and (min-width: 768px) {
+    .hero__title {
+      font-size: 26px;
+    }
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
       url(../images/hero/hero-img-tablet.jpg);
-  }
-}
 
-@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
-  (-webkit-min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
-  .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../images/hero/hero-img-tablet@2x.jpg);
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url(../images/hero/hero-img-tablet@2x.jpg);
+    }
   }
-}
-
-@media screen and (min-width: 1200px) {
-  .hero {
+  @media screen and (min-width: 1200px) {
     max-width: 1600px;
+    height: 600px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
       url(../images/hero/hero-img-desktop.jpg);
     padding-top: 200px;
     padding-bottom: 200px;
+
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url(../images/hero/hero-img-desktop@2x.jpg);
+    }
+    .hero__title {
+      @include font(44px, 900, 1.36, 0.06em);
+    }
   }
 }
-
-@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
-  (-webkit-min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
-  .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../images/hero/hero-img-desktop@2x.jpg);
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .hero__title {
-    @include font(44px, 900, 1.36, 0.06em);
-  }
+.hero__title {
+  margin: 0 auto;
+  @include font(22px, 900, 1.61, 0.06em);
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+  color: var(--secondary-font-color);
 }
