--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -30,6 +30,8 @@
   flex-wrap: wrap;
   margin-bottom: 40px;
   padding-left: 0;
+  margin-top: -15px;
+  margin-left: -8px;
 }
 .portfolio__item {
   margin-top: 15px;
