--- a/sass/utils/_common.scss
+++ b/sass/utils/_common.scss
@@ -2,13 +2,16 @@ body {
   color: var(--main-font-color);
   font-family: var(--main-font);
 }
-
 .link {
   text-decoration: none;
   color: inherit;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 .list {
   list-style: none;
+}
+button {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 h1,
 h2,
