--- a/sass/utils/_common.scss
+++ b/sass/utils/_common.scss
@@ -1,8 +1,14 @@
+html {
+  &.no-scroll {
+    overflow-y: hidden;
+  }
+}
+
 body {
   color: var(--main-font-color);
   font-family: var(--main-font);
   &.no-scroll {
-    overflow: hidden;
+    overflow-y: scroll;
   }
   @media screen and (max-width: 768px) {
     padding: 77px 0 0 0;
