--- a/sass/utils/_common.scss
+++ b/sass/utils/_common.scss
@@ -1,6 +1,6 @@
 html {
   &.no-scroll {
-    overflow-y: hidden;
+    overflow: hidden;
   }
 }
 
@@ -8,7 +8,7 @@ body {
   color: var(--main-font-color);
   font-family: var(--main-font);
   &.no-scroll {
-    overflow-y: scroll;
+    overflow: hidden;
   }
   @media screen and (max-width: 768px) {
     padding: 77px 0 0 0;
