--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -6,7 +6,7 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
-  z-index: 10;
+  z-index: 100;
   transition: opacity var(--main-duration) var(--timing-function),
     visibility var(--main-duration) var(--timing-function);
 }
@@ -24,7 +24,10 @@
   left: 50%;
   padding: 40px 40px;
   transform: translate(-50%, -50%) scale(1);
-  max-height: 609px;
+  max-height: 100%;
+  @media screen and (orientation: landscape) and (max-width: 768px) {
+    overflow: auto;
+  }
   background-color: var(--secondary-font-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
